--- a/languages/_s.pot
+++ b/languages/_s.pot
@@ -1,10 +1,10 @@
-# Copyright (C) 2015 Automattic
+# Copyright (C) 2015 Luke Gaudreau
 # This file is distributed under the GNU General Public License v2 or later.
 msgid ""
 msgstr ""
 "Project-Id-Version: reachsupply 1.0.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/theme/style\n"
-"POT-Creation-Date: 2015-04-07 17:07:24+00:00\n"
+"POT-Creation-Date: 2015-04-10 13:40:15+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -93,15 +93,19 @@ msgstr ""
 msgid "Theme: %1$s by %2$s."
 msgstr ""
 
-#: functions.php:53 header.php:34
+#: functions.php:53 header.php:33
 msgid "Primary Menu"
 msgstr ""
 
 #: functions.php:54
+msgid "Secondary Menu"
+msgstr ""
+
+#: functions.php:55
 msgid "Social Menu"
 msgstr ""
 
-#: functions.php:94
+#: functions.php:95
 msgid "Sidebar 1"
 msgstr ""
 
@@ -199,24 +203,16 @@ msgstr ""
 msgid "reachsupply"
 msgstr ""
 
-#. Theme URI of the plugin/theme
-msgid "http://underscores.me/"
+#. Author URI of the plugin/theme
+msgid "http://reachsupply.com/"
 msgstr ""
 
 #. Description of the plugin/theme
-msgid ""
-"Hi. I'm a starter theme called <code>_s</code>, or <em>underscores</em>, if "
-"you like. I'm a theme meant for hacking so don't use me as a <em>Parent "
-"Theme</em>. Instead try turning me into the next, most awesome, WordPress "
-"theme out there. That's what I'm here for."
+msgid "A theme based on wd_s"
 msgstr ""
 
 #. Author of the plugin/theme
-msgid "Automattic"
-msgstr ""
-
-#. Author URI of the plugin/theme
-msgid "http://automattic.com/"
+msgid "Luke Gaudreau"
 msgstr ""
 
 #: comments.php:28
